--- a/package.json
+++ b/package.json
@@ -16,5 +16,12 @@
   "bugs": {
     "url": "https://github.com/abir-taheer/helpful-helper/issues"
   },
-  "homepage": "https://github.com/abir-taheer/helpful-helper#readme"
+  "homepage": "https://github.com/abir-taheer/helpful-helper#readme",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.4",
+    "dialogflow-fulfillment": "^0.6.1",
+    "express": "^4.17.1",
+    "morgan": "^1.9.1"
+  }
 }
