--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "cookie-parser": "^1.4.4",
     "dialogflow-fulfillment": "^0.6.1",
     "express": "^4.17.1",
+    "express-mysql-session": "^2.1.0",
+    "express-session": "^1.17.0",
     "morgan": "^1.9.1",
     "mysql": "^2.17.1"
   }
