--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "query-string": "^6.8.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-moment": "^0.9.6",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "rmwc": "^5.6.0",
