--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@rmwc/avatar": "^5.7.0",
+    "@rmwc/checkbox": "^5.7.0",
     "@rmwc/data-table": "^5.6.0",
     "query-string": "^6.8.2",
     "react": "^16.8.6",
