--- a/client/package.json
+++ b/client/package.json
@@ -6,8 +6,10 @@
     "@rmwc/avatar": "^5.7.0",
     "@rmwc/checkbox": "^5.7.0",
     "@rmwc/data-table": "^5.6.0",
+    "apexcharts": "^3.10.1",
     "query-string": "^6.8.2",
     "react": "^16.8.6",
+    "react-charts": "^2.0.0-beta.4",
     "react-dom": "^16.8.6",
     "react-moment": "^0.9.6",
     "react-router-dom": "^5.0.1",
