--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express-session": "^1.17.0",
     "morgan": "^1.9.1",
     "mysql": "^2.17.1",
+    "regression": "^2.0.1",
     "twilio": "^3.37.0"
   }
 }
